[gd_scene load_steps=27 format=2]

[ext_resource path="res://scripts/menu/PlayButton.gd" type="Script" id=1]
[ext_resource path="res://scripts/menu/ReturnMenu.gd" type="Script" id=2]
[ext_resource path="res://scripts/menu/TitleMenu.gd" type="Script" id=3]
[ext_resource path="res://ASSETS/UI/43c5a51de1b2eb3.png" type="Texture" id=4]
[ext_resource path="res://ASSETS/fonts/PressStart.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://ASSETS/fonts/Minecraft.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://ASSETS/fonts/amstrad_cpc464.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://ASSETS/UI/grey_button04.png" type="Texture" id=8]
[ext_resource path="res://ASSETS/UI/arrow-UP.png" type="Texture" id=9]
[ext_resource path="res://ASSETS/sounds/mus_title.ogg" type="AudioStream" id=10]

[sub_resource type="DynamicFont" id=1]
size = 128
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.109804, 0.607843, 0.113725, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="DynamicFont" id=7]
size = 64
font_data = ExtResource( 5 )

[sub_resource type="InputEventAction" id=8]
action = "start"

[sub_resource type="ShortCut" id=9]
shortcut = SubResource( 8 )

[sub_resource type="DynamicFont" id=10]
size = 32
font_data = ExtResource( 5 )

[sub_resource type="InputEventJoypadButton" id=11]
button_index = 3

[sub_resource type="ShortCut" id=12]
shortcut = SubResource( 11 )

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="DynamicFont" id=14]
size = 24
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=15]
size = 160
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=16]
size = 100
font_data = ExtResource( 6 )

[node name="TitleMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 0.353546
margin_right = 1280.35
margin_bottom = 720.0
color = Color( 0, 0, 0.388235, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -576.0
margin_top = 25.0
margin_right = 576.0
margin_bottom = 284.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 0, 1 )
text = "KIYU'S
REVENGE"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_left = 17.0
margin_top = 512.0
margin_right = 415.0
margin_bottom = 706.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Panel"]
margin_left = 8.0
margin_top = 8.0
margin_right = 206.0
margin_bottom = 54.9999
texture = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/TextureRect"]
margin_left = 6.0
margin_top = 12.0
margin_right = 198.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "KEY_SPACE"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="Panel"]
margin_left = 8.0
margin_top = 67.0
margin_right = 62.0
margin_bottom = 114.0
texture = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Panel/TextureRect2"]
margin_left = 9.20276
margin_top = 39.7435
margin_right = 43.2028
margin_bottom = 73.7435
rect_rotation = -90.0
texture = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect3" type="TextureRect" parent="Panel"]
margin_left = 152.0
margin_top = 67.0
margin_right = 206.0
margin_bottom = 114.0
texture = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="Panel/TextureRect3"]
margin_left = 45.6898
margin_top = 5.76416
margin_right = 79.6898
margin_bottom = 39.7642
rect_rotation = 90.0
texture = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect4" type="TextureRect" parent="Panel"]
margin_left = 83.0
margin_top = 128.0
margin_right = 137.0
margin_bottom = 175.0
texture = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/TextureRect4"]
margin_left = 14.0
margin_top = 12.0
margin_right = 46.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "F"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel"]
margin_left = 230.0
margin_top = 18.0
margin_right = 430.0
margin_bottom = 50.0
custom_fonts/font = SubResource( 4 )
text = "TITLE_JUMP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Panel"]
margin_left = 230.0
margin_top = 75.0
margin_right = 440.0
margin_bottom = 107.0
custom_fonts/font = SubResource( 4 )
text = "TITLE_MOVE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Panel"]
margin_left = 230.0
margin_top = 140.0
margin_right = 440.0
margin_bottom = 172.0
custom_fonts/font = SubResource( 4 )
text = "TITLE_RUN"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Author" type="Label" parent="."]
margin_left = 800.0
margin_top = 280.0
margin_right = 1184.0
margin_bottom = 312.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "TITLE_AUTHOR"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -358.0
margin_top = 20.0
margin_right = 358.0
margin_bottom = 90.0
custom_styles/focus = SubResource( 6 )
custom_fonts/font = SubResource( 7 )
custom_colors/font_color_hover = Color( 0.968627, 1, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 1, 0, 1 )
shortcut_in_tooltip = false
shortcut = SubResource( 9 )
text = "PRESS START"
flat = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsButton" type="Button" parent="."]
margin_left = 821.0
margin_top = 684.0
margin_right = 1281.0
margin_bottom = 722.0
custom_styles/focus = SubResource( 6 )
custom_fonts/font = SubResource( 10 )
custom_colors/font_color_hover = Color( 0.968627, 1, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 1, 0, 1 )
shortcut_in_tooltip = false
shortcut = SubResource( 12 )
text = "TITLE_SETTINGS"
flat = true
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="."]
margin_right = 276.0
margin_bottom = 30.0
custom_styles/focus = SubResource( 13 )
custom_fonts/font = SubResource( 14 )
custom_colors/font_color_hover = Color( 0.968627, 1, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 1, 0, 1 )
shortcut_in_tooltip = false
text = "SYSTEM_QUIT"
flat = true
align = 0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControllerDetection" type="TextureRect" parent="."]
margin_left = 0.353546
margin_top = 530.615
margin_right = 1950.35
margin_bottom = 1480.61
rect_scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ControllerDetection"]
margin_left = 1918.23
margin_top = 424.996
margin_right = 2438.23
margin_bottom = 584.996
custom_fonts/font = SubResource( 15 )
text = "TITLE_JUMP"

[node name="Label2" type="Label" parent="ControllerDetection"]
margin_left = 1235.72
margin_right = 1725.72
margin_bottom = 160.0
custom_fonts/font = SubResource( 15 )
text = "TITLE_RUN"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="ControllerDetection"]
margin_left = 324.682
margin_top = 204.728
margin_right = 763.682
margin_bottom = 304.728
custom_fonts/font = SubResource( 16 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "TITLE_MOVE"
align = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -5.0
autoplay = true

[connection signal="pressed" from="PlayButton" to="PlayButton" method="_on_PlayButton_pressed"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
